# ToolKit

./: .clang-format  .gitignore  CMakeLists.txt  DQToolKits.pro  LICENSE  README.md  app.rc  res.qrc  toolkits.pro
.github/workflows/: build-windows.yml  release.yml
cmake/: Dependencies.cmake  Options.cmake
lib/: fmt.lib  qhotkey.lib
lib/debug/: fmtd.lib
libs/: qhotkey.lib
scripts/: commit-msg  msvc2019.bat  setup-hooks-linux.sh  setup-hooks-win.bat
src/: CMakeLists.txt  basewidget.cpp  basewidget.h  common.cpp  common.h  datadef.h  dataservice.cpp  dataservice.h  hmiconfig.h  logdt.cpp  logdt.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgdata.cpp  msgdata.h  widgetmanger.cpp  widgetmanger.h  widgetmanger.ui
src/common/: CMakeLists.txt
src/components/: CMakeLists.txt  basetable.h  basewidget.cpp  dlgprompt.cpp  dlgprompt.ui  flowlayout.cpp  flowlayout.h  overlay.cpp  overlay.h
src/components/help/model/: helpmodel.h
src/components/help/service/: helpservice.cpp
src/components/help/widget/: dlghelp.h  dlghelp.ui
src/core/: CMakeLists.txt  sysapi.cpp  sysapi.h  widgetmanger.cpp  widgetmanger.ui
src/core/config/: configsetting.cpp  configsetting.h
src/core/externaltool/: apiexternaltool.cpp  apiexternaltool.h  exeexternaltool.cpp  exeexternaltool.h  externaltoolbase.cpp  externaltoolbase.h  factoryregister.h  shellexternaltool.cpp  toolfactory.cpp
src/core/logging/: tklogger.cpp  tklogger.h
src/core/model/: msgdata.h
src/core/system/: sysapi.cpp  sysapi.h
src/core/threadmanager/: threadmanager.cpp  threadmanager.h
src/data/: datacomrpt.cpp  dataconfig.cpp  datalog.cpp  datalog.h  datapainter.h  dataxmleditor.cpp  sysapi.cpp  sysapi.h
src/hmi/: hmicomrpt.cpp  hmicomrpt.h  hmiconfig.cpp  hmilog.cpp  hmilog.h  hmipainter.cpp  hmipainter.h  hmipainter.ui  hmixmleditor.cpp  hmixmleditor.h  sysapi.h  syspathmanager.cpp  syspathmanager.h
src/model/: datacomrpt.h  dataconfig.h  datalog.cpp  datapainter.cpp  datapainter.ui  dataxmleditor.cpp  dataxmleditor.h
src/modules/: CMakeLists.txt
src/modules/about/: CMakeLists.txt
src/modules/about/widget/: dlgabout.cpp  dlgabout.h  dlgabout.ui
src/modules/archive/: CMakeLists.txt
src/modules/archive/service/: archiveservice.cpp  archiveservice.h
src/modules/archive/widget/: dlgarchivemakeinfo.cpp  dlgarchivemakeinfo.h  wgarchivemaker.cpp  wgarchivemaker.h  wgarchivemaker.ui
src/modules/comrpt/: CMakeLists.txt
src/modules/comrpt/widget/: dlgcomres.cpp  dlgcomres.h  dlgcomres.ui  dlgunionplotsubline.h  dlgunionplotsubline.ui  unionplot.cpp  wgcomrpt.cpp  wgcomrpt.ui
src/modules/help/: CMakeLists.txt
src/modules/help/service/: helpservice.h
src/modules/help/widget/: dlghelp.cpp  dlghelp.h  dlghelp.ui
src/modules/logviewer/: CMakeLists.txt
src/modules/logviewer/model/: datalog.cpp
src/modules/logviewer/widget/: wglog.cpp  wglog.h  wglog.ui
src/modules/renametool/: CMakeLists.txt
src/modules/renametool/model/: renametooldata.h
src/modules/renametool/service/: renametoolservice.cpp  renametoolservice.h
src/modules/renametool/widget/: wgrenametool.cpp  wgrenametool.h  wgrenametool.ui
src/modules/thememanager/: CMakeLists.txt
src/modules/typroacleaner/: CMakeLists.txt
src/modules/typroacleaner/widget/: wgtyproaimgcleaner.cpp  wgtyproaimgcleaner.h
src/modules/xmleditor/: CMakeLists.txt
src/modules/xmleditor/model/: dataxmleditor.cpp
src/modules/xmleditor/widget/: wgxmleditor.h  wgxmleditor.ui
src/platform/: CMakeLists.txt  sysapi.cpp  sysapi.h
src/ui/: CMakeLists.txt  CmakeLists.txt  uifactory.cpp  uifactory.h  uiregister.h  widgetmanager.cpp  widgetmanager.h  widgetmanager.ui
src/ui/components/: basetable.cpp  basetable.h  basetable.ui
src/utils/: CMakeLists.txt  common.cpp  common.h  logger.cpp  logger.h  stringopt.cpp  stringopt.h  tklogger.cpp  tklogger.h  xmlopt.cpp  xmlopt.h
src/utils/externaltool/: exeexternaltool.cpp  exeexternaltool.h  externaltoolbase.h  shellexternaltool.h  toolfactory.h
src/widget/: dlgabout.cpp  dlgabout.h  dlgarchivemakeinfo.cpp  dlgarchivemakeinfo.ui  dlgarchiveprocess.cpp  dlgarchiveprocess.h  dlgarchiveprocess.ui  dlgbtfmakeinfo.cpp  dlgbtfmakeinfo.h  dlgbtfmakeinfo.ui  dlgbtfprocess.cpp  dlgbtfprocess.h  dlgbtfprocess.ui  dlgcomres.cpp  dlghelp.cpp  dlghelp.ui  dlgprompt.cpp  dlgprompt.h  dlgprompt.ui  dlgunionplotsubline.cpp  unionplot.cpp  unionplot.h  unionplot.ui  wgarchivemaker.cpp  wgarchivemaker.h  wgarchivemaker.ui  wgbtfmake.cpp  wgbtfmake.h  wgbtfmake.ui  wgcomrpt.cpp  wgcomrpt.h  wgcomrpt.ui  wggeneratebugfolder.cpp  wggeneratebugfolder.h  wggeneratebugfolder.ui  wglog.cpp  wglog.h  wglog.ui  wgtestpython.cpp  wgtestpython.h  (+13 more)
src/widget/components/: basetable.h
src/widget/control/: basetable.cpp  basetable.h  tkwebview.cpp  tkwebview.h  tkwebview.ui
style/: style.qss
